--- a/back/package.json
+++ b/back/package.json
@@ -9,9 +9,7 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "dev": "nodemon src/app.js",
