--- a/back/package.json
+++ b/back/package.json
@@ -10,11 +10,12 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   },
   "scripts": {
     "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "keywords": [],
   "author": "",
