--- a/back/package.json
+++ b/back/package.json
@@ -11,11 +11,12 @@
   },
   "devDependencies": {
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "scripts": {
     "dev": "nodemon src/app.js",
-    "test": "test"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
